--- a/gb/22/2/20/n13591156.md
+++ b/gb/22/2/20/n13591156.md
@@ -1,19 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/esmwkr345/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/esmwkr345/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/esmwkr345/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/esmwkr345/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/esmwkr345/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/esmwkr345/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/esmwkr345/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/esmwkr345/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/esmwkr345/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/esmwkr345/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/esmwkr345/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/esmwkr345/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/esmwkr345/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/esmwkr345/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/esmwkr345/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/esmwkr345/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/esmwkr345/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/esmwkr345/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/esmwkr345/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/esmwkr345/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/esmwkr345/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/esmwkr345/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/esmwkr345/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/cufnqn370/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/cufnqn370/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/cufnqn370/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>华府观众赞神韵：肯尼迪中心歌剧院最棒的秀</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/02/id13591208-220219171322100101-600x400.jpg" />
 <h6>2022年2月19日下午，Shirley Pearlman女士（左）和Sarah Kim女士观看了今年神韵纽约艺术团在华盛顿特区肯尼迪艺术中心歌剧院（The Kennedy Center Opera House）的第六场演出。（麦蕾／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2022年02月20日讯】（大纪元记者麦蕾美国华盛顿DC报导）在<ahref="https://github.com/esmwkr345/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>演出的中场，很多观众边笑边聊，回忆刚才看到的<ahref="https://github.com/esmwkr345/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>和听到的歌曲，很快就成了朋友。Shirley Pearlman女士和Sarah Kim女士就是其中的两位。</p>
-<p>2月19日下午，<ahref="https://github.com/esmwkr345/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>纽约艺术团在美国首都<ahref="https://github.com/esmwkr345/djy/blob/master/gb/tag/%E8%82%AF%E5%B0%BC%E8%BF%AA%E8%89%BA%E6%9C%AF%E4%B8%AD%E5%BF%83%E6%AD%8C%E5%89%A7%E9%99%A2.md#1">肯尼迪艺术中心歌剧院</a>的第六场演出，再次爆满，很多边角的座位也坐满了观众，现场掌声不断。</p>
+	<p>【大纪元2022年02月20日讯】（大纪元记者麦蕾美国华盛顿DC报导）在<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>演出的中场，很多观众边笑边聊，回忆刚才看到的<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>和听到的歌曲，很快就成了朋友。Shirley Pearlman女士和Sarah Kim女士就是其中的两位。</p>
+<p>2月19日下午，<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>纽约艺术团在美国首都<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E8%82%AF%E5%B0%BC%E8%BF%AA%E8%89%BA%E6%9C%AF%E4%B8%AD%E5%BF%83%E6%AD%8C%E5%89%A7%E9%99%A2.md#1">肯尼迪艺术中心歌剧院</a>的第六场演出，再次爆满，很多边角的座位也坐满了观众，现场掌声不断。</p>
 <p>Shirley Pearlman说，神韵是“肯尼迪歌剧院最棒的秀”。Shirley Pearlman是美国知名政界人士Donald Pearlman的遗孀。Donald Pearlman是全球实力最强的执业律所之一Patton Boggs的合伙人，他还曾在里根政府担任美国内政部长和能源部长的执行助理。</p>
-<p>Pearlman女士说：“真的是非常积极的、难以置信的体验！无法想像他们是如何完成那个<ahref="https://github.com/esmwkr345/djy/blob/master/gb/tag/%E5%A4%A9%E5%B9%95.md#1">天幕</a>的，简直就是美不胜收！还有<ahref="https://github.com/esmwkr345/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>的壮观大气和服饰的美妙绝伦。我想不到有更好的方式来享受这个周六下午的时光。”</p>
-<p><ahref="https://github.com/esmwkr345/djy/blob/master/gb/tag/%E5%A4%A9%E5%B9%95.md#1">天幕</a>设计令Pearlman一见倾心：“简直是不可思议，美得非常养眼。”她特别欣赏神韵交响乐团，一直在询问他们的信息，认为他们演奏得好得“难以置信”。她很赞赏主持人对节目的介绍，对于不了解中国文化的美国人，主持人的介绍非常及时。</p>
+<p>Pearlman女士说：“真的是非常积极的、难以置信的体验！无法想像他们是如何完成那个<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E5%A4%A9%E5%B9%95.md#1">天幕</a>的，简直就是美不胜收！还有<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>的壮观大气和服饰的美妙绝伦。我想不到有更好的方式来享受这个周六下午的时光。”</p>
+<p><ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E5%A4%A9%E5%B9%95.md#1">天幕</a>设计令Pearlman一见倾心：“简直是不可思议，美得非常养眼。”她特别欣赏神韵交响乐团，一直在询问他们的信息，认为他们演奏得好得“难以置信”。她很赞赏主持人对节目的介绍，对于不了解中国文化的美国人，主持人的介绍非常及时。</p>
 <p>Sarah Kim女士是房地美（Freddie Mac）的总监，她说自己喜爱神韵的服装，长袖舞真是特别神奇！她还谈到那个反迫害的故事，最后大法弟子被神拯救，这是一个美好的结局。</p>
 <h2>“神韵展现美好 我差点感动哭了”</h2>
-<figure id="attachment_13591199" aria-describedby="caption-attachment-13591199" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/02/id13591199-220219173805100101.jpg"><img class="size-large wp-image-13591199" title="" src="https://i.epochtimes.com/assets/uploads/2022/02/id13591199-220219173805100101-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13591199" class="wp-caption-text">2022年2月19日下午，Fernando Uribe和太太Elizabeth Gutierrez ，观看了神韵纽约艺术团在<ahref="https://github.com/esmwkr345/djy/blob/master/gb/tag/%E8%82%AF%E5%B0%BC%E8%BF%AA%E8%89%BA%E6%9C%AF%E4%B8%AD%E5%BF%83%E6%AD%8C%E5%89%A7%E9%99%A2.md#1">肯尼迪艺术中心歌剧院</a>（The Kennedy Center Opera House）的第六场演出。（麦蕾／大纪元）</figcaption></figure>
+<figure id="attachment_13591199" aria-describedby="caption-attachment-13591199" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/02/id13591199-220219173805100101.jpg"><img class="size-large wp-image-13591199" title="" src="https://i.epochtimes.com/assets/uploads/2022/02/id13591199-220219173805100101-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13591199" class="wp-caption-text">2022年2月19日下午，Fernando Uribe和太太Elizabeth Gutierrez ，观看了神韵纽约艺术团在<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E8%82%AF%E5%B0%BC%E8%BF%AA%E8%89%BA%E6%9C%AF%E4%B8%AD%E5%BF%83%E6%AD%8C%E5%89%A7%E9%99%A2.md#1">肯尼迪艺术中心歌剧院</a>（The Kennedy Center Opera House）的第六场演出。（麦蕾／大纪元）</figcaption></figure>
 <p>2022年2月19日下午，Fernando Uribe和太太Elizabeth Gutierrez ，观看了神韵今年在肯尼迪艺术中心歌剧院的第六场演出后，情不自禁地赞叹：“一切都太美好了！”</p>
 <p>太太Elizabeth来自玻利维亚，她是连锁店的老板，她在华盛顿和弗吉尼亚州都有自己的生意。Fernando先生来自智利，是位商船工程师，也是哥伦比亚大学的退休研究员。他们在美国已经生活了35年。</p>
 <p>Elizabeth表示，“我喜欢这台演出，非常漂亮。对我来说，所有的东西都太棒了，没有什么我可以抱怨的，一切都非常美丽。”</p>
@@ -26,43 +26,37 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/2/19/n13588690.md#1">政治学者盛赞：神韵是中国文化的典范</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/2/19/n13588702.md#1">神经外科医师热爱神韵 赞壮丽恢弘涤荡身心</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/2/19/n13588714.md#1">圣安东尼奥加场爆满 名流：神韵将广传世界</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/2/19/n13588829.md#1">集团创始人看神韵：从未看过这么棒的演出</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/2/19/n13588888.md#1">神韵展现纯净完美价值观 陆军中校心驰神往</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/2/19/n13588895.md#1">律师推崇神韵演出赏心悦目、动人心弦</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/19/n13588690.md#1">政治学者盛赞：神韵是中国文化的典范</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/19/n13588702.md#1">神经外科医师热爱神韵 赞壮丽恢弘涤荡身心</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/19/n13588714.md#1">圣安东尼奥加场爆满 名流：神韵将广传世界</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/19/n13588829.md#1">集团创始人看神韵：从未看过这么棒的演出</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/19/n13588888.md#1">神韵展现纯净完美价值观 陆军中校心驰神往</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/19/n13588895.md#1">律师推崇神韵演出赏心悦目、动人心弦</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/21/n9757183.md#1" target="_blank">杨宁： 中共谎言之“三三制政权共享”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/31/n11014025.md#1" target="_blank">绝处逢生 79岁老军医讲述的亲身经历</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/31/n10265684.md#1" target="_blank">共产暴政录：中共为什么要败坏中国人的道德</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/10/21/n4555095.md#1" target="_blank">这条命是法轮功给的</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/3/n13617717.md#1">【百年真相】惊天大案头目 被江泽民故意放走？</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/2/17/n13585268.md#1">【未解之谜】通灵男孩之一：癌症是“螃蟹”？</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/2/21/n13594785.md#1">【未解之谜】拿地球人做实验？外星人意欲何为？</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/6/n13625395.md#1">日本寺庙有300年前人鱼木乃伊 长30公分</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/6/n13625884.md#1">五行异象 大风吹太和殿大门倒地  史鉴示警</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/10/n13637209.md#1">【财商天下】制裁不断加码 中共救不了俄罗斯</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/10/n13637763.md#1">【横河观点】韩国大选另类输者 俄侵乌中共失算</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/10/n13637288.md#1">专访吴国光：俄乌战局 习与权势集团分裂</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/7/n13629102.md#1">俄政府内被爆“末日恐慌”忧战败及经济崩盘</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/9/n13632875.md#1">英男咖啡因中毒身亡 摄取量相当于200杯咖啡</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/8/n13631361.md#1">【一线采访】疑打疫苗后患白血病 中共严控消息</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/8/n13631331.md#1">首位艺人从军阵亡 乌国33岁男星最后身影曝光</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/9/n13634546.md#1">大S再婚震惊娱乐圈 20年未换电话号码成热话</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/8/n13630730.md#1">朱芯仪36岁生日宣布得乳癌 曝病况泪谢丈夫陪伴</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/10/n13637452.md#1">迪丽热巴进剧组 用红白蓝色蛇皮袋当行李箱</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/9/n13634699.md#1">舆论持续关注铁链女 《窦娥冤》剧演被叫停</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/7/n13626962.md#1">早餐天天喝这一杯 改善白发、年轻20岁</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/2/26/n13606611.md#1">肉类是糖尿病根源？改变饮食一个月就逆转</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/7/n13628592.md#1">燕麦：健康、被低估的超级食品</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/8/n13630345.md#1">为何有些航空公司不使用空桥让乘客登机？</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/9/n13633200.md#1">杏鲍菇酱香入味一诀窍 5分钟脆嫩鲜甜上菜</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/15/n11942229.md#1">大陆原卫生高官：疫情恐再爆发 谎言将破灭</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/15/n11942675.md#1">任志强失联4天 其好友求救外媒向中共施压</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/1/2/n11764074.md#1">他们身上的毒疮 原来是夙怨</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/7/n11923201.md#1">【历史回眸】抵抗极权 最简单的方法是拒绝说谎</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/6/n11920418.md#1">线条魔术家  白描大师李公麟和五马图</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/esmwkr345/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/esmwkr345/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/2/20/n13591156.htm">华府观众赞神韵：肯尼迪中心歌剧院最棒的秀</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/cufnqn370/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/cufnqn370/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/2/20/n13591156.htm">华府观众赞神韵：肯尼迪中心歌剧院最棒的秀</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/esmwkr345/djy/blob/master/gb/22/2/20/n13591156.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/esmwkr345/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/esmwkr345/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/esmwkr345/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/cufnqn370/djy/blob/master/gb/22/2/20/n13591156.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/cufnqn370/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/cufnqn370/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
